# xbeam-virtualizarr

./: README.md  pyproject.toml  recipe.py  requirements.txt  setup.py
.github/workflows/: deploy_recipe.yaml
feedstock/: recipe.py
xbeam-virtualizarr/: recipe.py
xbeam_virtualizarr/: recipe.py
