[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "xbeam-virtualizarr"

dynamic = ["version"]

requires-python = ">=3.9"

dependencies = [
        'apache-beam[gcp]',
        'xarray_beam',
        'xarray',
        'kerchunk',
        'fastparquet',
        'pyarrow',
        'gcsfs',
        'google-cloud']



[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  'configs' # to avoid raising "F821 Undefined name `c`" in each of the configs
]
